--- a/assets/style.css
+++ b/assets/style.css
@@ -144,6 +144,7 @@ header #menu-bar{
 }
 
 .home{
+    z-index: 50;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
